[tool.poetry]
name = "fractal-link"
version = "0.1.0"
description = ""
authors = ["Mo Balaa <balaa@fractalnetworks.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fractal-cli = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."fractal.plugins"]
"links" = "fractal_link.controllers.link"